# richards-swe-coupling

./: .gitignore  README.md  params.yaml  pyproject.toml  stylesheet.mpl
coupling/: analysis.py  groundwater.py  precice-config.xml.j2  process_results.py  river.py  setup_simulation.py  simulation.py
experiments/: S_analytical.py  alpha_analytical.py  analytical_results.py  conv_rates.py  conv_rates.yaml  convergence_no_relaxation.py  convergence_no_relaxation.yaml  grid_dependence_surface.py  omega_opt_analytical.py  parallel_convergence.py  physics_dependence_surface.py  plot_cvg_no_relaxation.py  subcycling_analytical.py  varying_grids.py  varying_grids.yaml  varying_physics.py  varying_physics.yaml
src/: analysis.py  coupled.py  enums.py  groundwater.py  heat.py  laplace.py  plot_results.py  precice-config.xml  precice-config.xml.j2  process_results.py  river.py  setup_simulation.py
tests/: test_full_coupling.py  test_groundwater.py  test_params.yaml  test_river.py
